--- a/Programmania/wwwroot/statusPages/html/500.html
+++ b/Programmania/wwwroot/statusPages/html/500.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Error 404</title>
+    <title>Error 500</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/404.css" />
+    <link rel="stylesheet" href="../css/500.css" />
 </head>
 <body>
     <div class="container">
         <div class="error__description">
-            <p class="error__msg">Sorry we couldn`t find this page</p>
+            <p class="error__msg">Sorry, something is wrong with the server</p>
 
-            <p class="error__msg_small">Error 404: Not Found</p>
+            <p class="error__msg_small">Error 500: Internal Server Error</p>
 
             <div class="main__btn">
                 <input id="mainBtn" class="btn btn-secondary" type="button" value="Back To Main">
@@ -19,7 +19,7 @@
         </div>
 
         <div class="error__img">
-            <img src="../../images/404.svg" title="error">
+            <img src="../../images/500.svg" title="error">
         </div>
     </div>
 
