--- a/Programmania/wwwroot/statusPages/html/500.html
+++ b/Programmania/wwwroot/statusPages/html/500.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Error 500</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/500.css" />
+    <link rel="stylesheet" href="../../statusPages/css/500.css" />
 </head>
 <body>
     <div class="container">
@@ -22,8 +22,5 @@
             <img src="../../images/500.svg" title="error">
         </div>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="../js/404.js"></script>
 </body>
 </html>
