--- a/Programmania/wwwroot/statusPages/html/401.html
+++ b/Programmania/wwwroot/statusPages/html/401.html
@@ -5,7 +5,7 @@
     <title>Error 401</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/401.css" />
+    <link rel="stylesheet" href="../../statusPages/css/401.css" />
 </head>
 <body>
     <div class="container">
@@ -24,6 +24,6 @@
     </div>
 
     <script type="text/javascript" src="../../js/util/cookie.js"></script>
-    <script type="text/javascript" src="../js/401.js"></script>
+    <script type="text/javascript" src="../../statusPages/js/401.js"></script>
 </body>
 </html>
