--- a/Programmania/wwwroot/statusPages/html/404.html
+++ b/Programmania/wwwroot/statusPages/html/404.html
@@ -24,6 +24,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="../../js/util/cookie.js"></script>
     <script src="../../statusPages/js/404.js"></script>
 </body>
 </html>
